# simulation-testing

./: .gitignore  Cargo.toml  README.md  build.sh
res/: simulation_example.wasm
src/: lib.rs
tests/: simulation_tests.rs  utils.rs
tests/res/: counter.wasm
